--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -59,7 +59,9 @@ $a-code-rd: #f79dad;
 $a-code-gr: #cefd98;
 $a-code-p: #f5ca09;
 
-div.highlighter-rouge, 
+div.highlighter-rouge,
+div.highlighter-rouge.highlight, 
+div.highlighter-rouge.highlight.highlight,
 // commmmmeeeeeennnnnt
 pre.highlight code {
     background-color: $a-code-bg;
