--- a/_sass/color_schemes/tdv.scss
+++ b/_sass/color_schemes/tdv.scss
@@ -628,9 +628,13 @@ shown when checkbox is checked */
     padding: 1.5em;
     width: 100%;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 .tdv-op-container {
+    min-height: 400px;
     margin-bottom: 2em;
     overflow: auto;
 }
